--- a/src/main/webapp/resources/main.css
+++ b/src/main/webapp/resources/main.css
@@ -20,6 +20,7 @@ footer {
 	width: 95%;
 	min-height: 150px;
 	margin: 0 auto;
+	margin-top:30px;
 	font-size: 60%;
 	border-top-right-radius: 200px;
 }
