--- a/src/main/webapp/resources/main.css
+++ b/src/main/webapp/resources/main.css
@@ -1,7 +1,10 @@
-.content {
-	min-height: 600px;
+body{
+	min-height: 1080px;
 }
 
+.content {
+	min-height: 90%;
+}
 
 li {
 	list-style: none;
@@ -16,11 +19,6 @@ li {
 }
 
 footer {
-	background-color: #e1e1e1;
-	width: 95%;
 	min-height: 150px;
-	margin: 0 auto;
 	margin-top:30px;
-	font-size: 60%;
-	border-top-right-radius: 200px;
 }
